--- a/freemarker/src/main/resources/application.properties
+++ b/freemarker/src/main/resources/application.properties
@@ -1,12 +1,13 @@
-# 自定义 Freemarker 模板位置，模板的模板位置在 classpath 下面的 templates 目录中
+# \u81EA\u5B9A\u4E49 Freemarker \u6A21\u677F\u4F4D\u7F6E\uFF0C\u6A21\u677F\u7684\u6A21\u677F\u4F4D\u7F6E\u5728 classpath \u4E0B\u9762\u7684 templates \u76EE\u5F55\u4E2D
 #spring.freemarker.template-loader-path=classpath:/javaboy
-# 自定义模板的编码格式，默认就是 UTF-8
+# \u81EA\u5B9A\u4E49\u6A21\u677F\u7684\u7F16\u7801\u683C\u5F0F\uFF0C\u9ED8\u8BA4\u5C31\u662F UTF-8
 spring.freemarker.charset=UTF-8
-# 定义模板的 content-type
+# \u5B9A\u4E49\u6A21\u677F\u7684 content-type
 spring.freemarker.content-type=text/html
-# 是否开启 Freemarker 缓存
+# \u662F\u5426\u5F00\u542F Freemarker \u7F13\u5B58
 spring.freemarker.cache=false
-# 配置模板后缀
+# \u914D\u7F6E\u6A21\u677F\u540E\u7F00
 spring.freemarker.suffix=.ftl
+ server.port=5566
 
 
